Truncate “search for" (issue #2942) (#2960)
* Search bar - truncating label

* Merge

* Removing unnecessary line

--- a/src/components/Editor/SearchBar.css
+++ b/src/components/Editor/SearchBar.css
@@ -90,6 +90,7 @@
 .search-bottom-bar .search-type-toggles {
   display: flex;
   align-items: center;
+  max-width: 68%;
 }
 
 .search-bottom-bar .search-type-toggles .search-toggle-title {
@@ -97,10 +98,13 @@
   font-size: 11px;
   font-weight: normal;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .search-bottom-bar .search-type-toggles .search-type-btn {
-  margin: 0 6px;
+  margin: 0 0 0 6px;
   border: none;
   background: transparent;
   color: var(--theme-comment-alt);
